--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -70,8 +70,33 @@
                         android:id="@+id/newBookAmount_edit"
                         android:layout_weight="1"/>
                 </LinearLayout>
-
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="18dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="账本创建日期："
+                        android:gravity="right"/>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:singleLine="true"
+                        android:gravity="center"
+                        android:hint="点击选择日期"
+                        android:id="@+id/newBookStartDate_text"
+                        android:layout_weight="1"/>
+                </LinearLayout>
+            </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
