--- a/app/src/main/res/layout/activity_modify_book.xml
+++ b/app/src/main/res/layout/activity_modify_book.xml
@@ -33,27 +33,46 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="原账本名："
-                        android:gravity="right"/>
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="生活"
-                        android:gravity="left"
-                        android:id="@+id/old_name_text" />
+                        android:text="账本名："
+                        android:gravity="center"/>
                     <EditText
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:singleLine="true"
                         android:gravity="center"
-                        android:hint="点击输入新账本名"
+                        android:selectAllOnFocus="true"
                         android:id="@+id/new_name_edit"
                         android:layout_weight="2"/>
-
                 </LinearLayout>
 
             </LinearLayout>
+            <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="18dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="预算额："
+                    android:gravity="center"/>
+                <EditText
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:gravity="center"
+                    android:inputType="number"
+                   android:selectAllOnFocus="true"
+                    android:id="@+id/newBookAmount_edit"
+                    android:layout_weight="2"/>
+            </LinearLayout>
+        </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -67,27 +86,18 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="原预算额："
-                        android:gravity="right"/>
+                        android:text="账本创建日期："
+                        android:gravity="center"/>
                     <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="1000"
-                        android:gravity="left"
-                        android:id="@+id/old_amount_text" />
-                    <EditText
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:singleLine="true"
                         android:gravity="center"
-                        android:inputType="number"
-                        android:hint="点击输入新预算额"
-                        android:id="@+id/newBookAmount_edit"
+                        android:id="@+id/newBookCycleDate_text"
                         android:layout_weight="2"/>
                 </LinearLayout>
-
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -101,22 +111,15 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="原能否删除："
-                        android:gravity="right"/>
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="否"
-                        android:gravity="left"
-                        android:id="@+id/old_canDel_text" />
+                        android:text="能否删除："
+                        android:gravity="center"/>
                     <Spinner
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:id="@+id/canDel_spinner"
-                        android:layout_weight="1">
+                        android:layout_weight="2">
                     </Spinner>
                 </LinearLayout>
 
@@ -134,22 +137,15 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="原计算周期："
-                        android:gravity="right"/>
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="月"
-                        android:gravity="left"
-                        android:id="@+id/old_cycle_text" />
+                        android:text="计算周期："
+                        android:gravity="center"/>
                     <Spinner
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:id="@+id/newBookCycle_spinner"
-                        android:layout_weight="1">
+                        android:layout_weight="2">
                     </Spinner>
                 </LinearLayout>
 
