--- a/app/src/main/res/layout/total_info.xml
+++ b/app/src/main/res/layout/total_info.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/total_linearLayout"
-    android:layout_margin="15dp"
+    android:layout_margin="10dp"
     android:background="#8000">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:text="预算"
         android:id="@+id/book_name_text2"
         android:textColor="#fff"
@@ -23,7 +23,7 @@
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="2"
             >
             <LinearLayout
                 android:layout_width="match_parent"
@@ -36,13 +36,37 @@
                     android:id="@+id/total_text"
                     android:layout_gravity="center"
                     android:textColor="#fff"
-                    android:textSize="40sp" />
+                    android:textSize="30sp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:textColor="#fff"
                     android:text="总预算" />
+            </LinearLayout>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_centerInParent="true">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/spending_text"
+                    android:layout_gravity="center"
+                    android:textColor="#fff"
+                    android:textSize="30sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="已花费"
+                    android:textColor="#fff" />
             </LinearLayout>
         </RelativeLayout>
         <RelativeLayout
@@ -57,15 +81,15 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/spending_text"
+                    android:id="@+id/remaining_days"
                     android:layout_gravity="center"
                     android:textColor="#fff"
-                    android:textSize="40sp" />
+                    android:textSize="30sp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="已花费"
+                    android:text="距结算日"
                     android:textColor="#fff" />
             </LinearLayout>
         </RelativeLayout>
