--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/delete"
+        android:icon="@drawable/ic_delete_black_24dp"
         android:title="Delete"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 
 </menu>
