实现了识图记账的功能，基本实现所有功能，还差优化吧

--- a/app/src/main/res/layout-v21/activity_book.xml
+++ b/app/src/main/res/layout-v21/activity_book.xml
@@ -105,6 +105,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/welcome_text"
+                android:layout_gravity="center"
                 android:gravity="center" />
         </LinearLayout>
         <ListView
