--- a/app/src/main/res/layout/activity_modify_user.xml
+++ b/app/src/main/res/layout/activity_modify_user.xml
@@ -15,13 +15,15 @@
             android:layout_height="50dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="账户名：" />
+            android:text="昵称：" />
 
         <EditText
-            android:id="@+id/account_register_edit"
+            android:id="@+id/account_modifyUser_edit"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="2"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:inputType="textEmailAddress"/>
     </LinearLayout>
 
@@ -39,13 +41,15 @@
             android:gravity="center"
             android:text="邮箱：" />
 
-        <EditText
-            android:id="@+id/email_register_edit"
+        <TextView
+            android:id="@+id/email_modifyUser_text"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="2"
+            android:gravity="center"
             android:inputType="textEmailAddress"/>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -58,13 +62,15 @@
             android:layout_height="50dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="密码：" />
+            android:text="新密码：" />
 
         <EditText
-            android:id="@+id/password_register_edit"
+            android:id="@+id/newPassword_modifyUser_edit"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:inputType="textPassword"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:layout_weight="2" />
     </LinearLayout>
     <LinearLayout
@@ -79,13 +85,15 @@
             android:layout_height="50dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="重复密码：" />
+            android:text="重复新密码：" />
 
         <EditText
-            android:id="@+id/passwordConfirm_register_edit"
+            android:id="@+id/newPasswordConfirm_modifyUser_edit"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:inputType="textPassword"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:layout_weight="2" />
     </LinearLayout>
     <LinearLayout
@@ -99,8 +107,8 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/user_register_button"
-            android:text="注册"
+            android:id="@+id/user_modify_button"
+            android:text="确认修改"
             android:gravity="center" />
     </LinearLayout>
 </LinearLayout>
